assignment_2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    RUNE
    CHAN
    COND
    COM

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause ImportDeclList TopLevelDeclList
Rule 2     SourceFile -> PackageClause ImportDeclList
Rule 3     SourceFile -> PackageClause TopLevelDeclList
Rule 4     SourceFile -> PackageClause
Rule 5     PackageClause -> PACKAGE ID SEMICOLON
Rule 6     ImportDeclList -> ImportDecl SEMICOLON
Rule 7     ImportDeclList -> ImportDeclList ImportDecl SEMICOLON
Rule 8     ImportDecl -> IMPORT LPAREN ImportSpecList RPAREN
Rule 9     ImportDecl -> IMPORT LPAREN RPAREN
Rule 10    ImportDecl -> IMPORT ImportSpec
Rule 11    ImportSpecList -> ImportSpec SEMICOLON
Rule 12    ImportSpecList -> ImportSpecList ImportSpec SEMICOLON
Rule 13    ImportSpec -> ID ImportPath
Rule 14    ImportSpec -> PERIOD ImportPath
Rule 15    ImportSpec -> ImportPath
Rule 16    ImportPath -> STRING
Rule 17    TopLevelDeclList -> TopLevelDecl SEMICOLON
Rule 18    TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON
Rule 19    TopLevelDecl -> Declaration
Rule 20    TopLevelDecl -> FunctionDecl
Rule 21    TopLevelDecl -> MethodDecl
Rule 22    FunctionDecl -> FUNC ID OPENB Signature CLOSEB
Rule 23    FunctionDecl -> FUNC ID OPENB Signature Block CLOSEB
Rule 24    MethodDecl -> FUNC Parameters ID Signature
Rule 25    MethodDecl -> FUNC Parameters ID Signature Block
Rule 26    Declaration -> TypeDecl
Rule 27    Declaration -> VarDecl
Rule 28    TypeDecl -> TYPE TypeSpec
Rule 29    TypeDecl -> TYPE LPAREN TypeSpecList RPAREN
Rule 30    TypeDecl -> TYPE LPAREN RPAREN
Rule 31    TypeSpecList -> TypeSpec SEMICOLON
Rule 32    TypeSpecList -> TypeSpecList TypeSpec SEMICOLON
Rule 33    TypeSpec -> ID ASSIGN Type
Rule 34    TypeSpec -> ID Type
Rule 35    VarDecl -> VAR VarSpec
Rule 36    VarDecl -> VAR LPAREN VarSpecList RPAREN
Rule 37    VarDecl -> VAR LPAREN RPAREN
Rule 38    VarSpecList -> VarSpec SEMICOLON
Rule 39    VarSpecList -> VarSpecList VarSpec SEMICOLON
Rule 40    VarSpec -> IdentifierList Type
Rule 41    VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 42    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 43    VarSpec -> IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
Rule 44    VarSpec -> IdentifierList ASSIGN LBRACE ExpressionList RBRACE
Rule 45    ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 46    IdentifierList -> ID
Rule 47    IdentifierList -> IdentifierList COMMA ID
Rule 48    Type -> LiteralType
Rule 49    Type -> FunctionType
Rule 50    Type -> InterfaceType
Rule 51    Type -> ID
Rule 52    Type -> ID PERIOD ID
Rule 53    Type -> VARTYPE
Rule 54    LiteralType -> ArrayType
Rule 55    LiteralType -> StructType
Rule 56    LiteralType -> PointerType
Rule 57    LiteralType -> SliceType
Rule 58    LiteralType -> MapType
Rule 59    ArrayType -> LBRACK Expression RBRACK Type
Rule 60    StructType -> STRUCT LBRACE FieldDeclList RBRACE
Rule 61    StructType -> STRUCT LBRACE RBRACE
Rule 62    FieldDeclList -> FieldDecl SEMICOLON
Rule 63    FieldDeclList -> FieldDeclList FieldDecl SEMICOLON
Rule 64    FieldDecl -> IdentifierList Type STRING
Rule 65    FieldDecl -> IdentifierList Type
Rule 66    PointerType -> MUL Type
Rule 67    SliceType -> LBRACK RBRACK Type
Rule 68    MapType -> MAP LBRACK Type RBRACK Type
Rule 69    FunctionType -> FUNC Signature
Rule 70    Signature -> Parameters
Rule 71    Signature -> Parameters Parameters
Rule 72    Signature -> Parameters Type
Rule 73    Parameters -> LPAREN RPAREN
Rule 74    Parameters -> LPAREN ParameterList RPAREN
Rule 75    Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 76    ParameterList -> ParameterDecl
Rule 77    ParameterList -> ParameterList COMMA ParameterDecl
Rule 78    ParameterDecl -> Type
Rule 79    ParameterDecl -> IdentifierList Type
Rule 80    ParameterDecl -> ELLIPSIS Type
Rule 81    ParameterDecl -> IdentifierList ELLIPSIS Type
Rule 82    InterfaceType -> INTERFACE LBRACE RBRACE
Rule 83    InterfaceType -> INTERFACE LBRACE MethodSpecList RBRACE
Rule 84    MethodSpecList -> MethodSpec SEMICOLON
Rule 85    MethodSpecList -> MethodSpecList MethodSpec SEMICOLON
Rule 86    MethodSpec -> ID Signature
Rule 87    MethodSpec -> ID Type
Rule 88    Block -> LBRACE OPENB StatementList CLOSEB RBRACE
Rule 89    OPENB -> <empty>
Rule 90    CLOSEB -> <empty>
Rule 91    StatementList -> StatementList Statement SEMICOLON
Rule 92    StatementList -> Statement SEMICOLON
Rule 93    Statement -> Declaration
Rule 94    Statement -> LabeledStmt
Rule 95    Statement -> SimpleStmt
Rule 96    Statement -> GoStmt
Rule 97    Statement -> ReturnStmt
Rule 98    Statement -> BreakStmt
Rule 99    Statement -> ContinueStmt
Rule 100   Statement -> GotoStmt
Rule 101   Statement -> FallthroughStmt
Rule 102   Statement -> Block
Rule 103   Statement -> IfStmt
Rule 104   Statement -> SwitchStmt
Rule 105   Statement -> SelectStmt
Rule 106   Statement -> ForStmt
Rule 107   Statement -> DeferStmt
Rule 108   LabeledStmt -> ID COLON Statement
Rule 109   SimpleStmt -> ShortVarDecl
Rule 110   SimpleStmt -> EmptyStmt
Rule 111   SimpleStmt -> ExpressionStmt
Rule 112   SimpleStmt -> SendStmt
Rule 113   SimpleStmt -> IncDecStmt
Rule 114   SimpleStmt -> Assignment
Rule 115   EmptyStmt -> <empty>
Rule 116   ExpressionStmt -> Expression
Rule 117   SendStmt -> Expression ARROW Expression
Rule 118   IncDecStmt -> Expression INC
Rule 119   IncDecStmt -> Expression DEC
Rule 120   Assignment -> ExpressionList assign_op ExpressionList
Rule 121   GoStmt -> GO Expression
Rule 122   ReturnStmt -> RETURN
Rule 123   ReturnStmt -> RETURN ExpressionList
Rule 124   BreakStmt -> BREAK
Rule 125   BreakStmt -> BREAK ID
Rule 126   ContinueStmt -> CONTINUE
Rule 127   ContinueStmt -> CONTINUE ID
Rule 128   GotoStmt -> GOTO ID
Rule 129   FallthroughStmt -> FALLTHROUGH
Rule 130   IfStmt -> IF OPENB Expression Block CLOSEB
Rule 131   IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block CLOSEB
Rule 132   IfStmt -> IF OPENB Expression Block ELSE Block CLOSEB
Rule 133   IfStmt -> IF OPENB Expression Block ELSE IfStmt CLOSEB
Rule 134   IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block ELSE IfStmt CLOSEB
Rule 135   IfStmt -> IF OPENB SimpleStmt SEMICOLON Expression Block ELSE Block CLOSEB
Rule 136   SwitchStmt -> ExprSwitchStmt
Rule 137   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expression LBRACE ExprCaseClauseList RBRACE
Rule 138   ExprSwitchStmt -> SWITCH SimpleStmt SEMICOLON Expression LBRACE RBRACE
Rule 139   ExprSwitchStmt -> SWITCH Expression LBRACE ExprCaseClauseList RBRACE
Rule 140   ExprSwitchStmt -> SWITCH Expression LBRACE RBRACE
Rule 141   ExprSwitchStmt -> SWITCH LBRACE ExprCaseClauseList RBRACE
Rule 142   ExprSwitchStmt -> SWITCH LBRACE RBRACE
Rule 143   ExprCaseClauseList -> ExprCaseClause
Rule 144   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 145   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 146   ExprSwitchCase -> CASE ExpressionList
Rule 147   ExprSwitchCase -> DEFAULT
Rule 148   ExprSwitchCase -> CASE Expression
Rule 149   SelectStmt -> SELECT LBRACE RBRACE
Rule 150   SelectStmt -> SELECT LBRACE CommClauseList RBRACE
Rule 151   CommClauseList -> CommClause
Rule 152   CommClauseList -> CommClauseList CommClause
Rule 153   CommClause -> CommCase COLON StatementList
Rule 154   CommCase -> CASE SendStmt
Rule 155   CommCase -> DEFAULT
Rule 156   CommCase -> CASE RecvStmt
Rule 157   RecvStmt -> ExpressionList ASSIGN Expression
Rule 158   RecvStmt -> Expression
Rule 159   RecvStmt -> IdentifierList DEFINE Expression
Rule 160   ForStmt -> FOR ForStmt_1 Block
Rule 161   ForStmt_1 -> Condition
Rule 162   ForStmt_1 -> ForClause
Rule 163   ForStmt_1 -> RangeClause
Rule 164   ForStmt_1 -> <empty>
Rule 165   Condition -> Expression
Rule 166   ForClause -> ForClause_1 SEMICOLON ForClause_2 SEMICOLON ForClause_3
Rule 167   ForClause_1 -> SimpleStmt
Rule 168   ForClause_2 -> Condition
Rule 169   ForClause_2 -> <empty>
Rule 170   ForClause_3 -> SimpleStmt
Rule 171   RangeClause -> RangeClause_1 RANGE Expression
Rule 172   RangeClause_1 -> ExpressionList ASSIGN
Rule 173   RangeClause_1 -> IdentifierList DEFINE
Rule 174   RangeClause_1 -> <empty>
Rule 175   DeferStmt -> DEFER Expression
Rule 176   ExpressionList -> Expression
Rule 177   ExpressionList -> ExpressionList COMMA Expression
Rule 178   Expression -> Expression1
Rule 179   Expression -> UnaryExpr assign_op Expression
Rule 180   Expression1 -> Expression2
Rule 181   Expression1 -> Expression1 LOR Expression2
Rule 182   Expression2 -> Expression3
Rule 183   Expression2 -> Expression2 LAND Expression3
Rule 184   Expression3 -> Expression4
Rule 185   Expression3 -> Expression3 rel_op Expression4
Rule 186   Expression4 -> Expression5
Rule 187   Expression4 -> Expression4 add_op Expression5
Rule 188   Expression5 -> UnaryExpr
Rule 189   Expression5 -> Expression5 mul_op UnaryExpr
Rule 190   UnaryExpr -> PrimaryExpr
Rule 191   UnaryExpr -> unary_op UnaryExpr
Rule 192   PrimaryExpr -> Operand
Rule 193   PrimaryExpr -> MethodExpr
Rule 194   PrimaryExpr -> PrimaryExpr Selector
Rule 195   PrimaryExpr -> PrimaryExpr Index
Rule 196   PrimaryExpr -> PrimaryExpr Slice
Rule 197   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 198   PrimaryExpr -> PrimaryExpr Arguments
Rule 199   MethodExpr -> Type PERIOD ID
Rule 200   Selector -> PERIOD ID
Rule 201   Index -> LBRACK Expression RBRACK
Rule 202   Slice -> LBRACK COLON RBRACK
Rule 203   Slice -> LBRACK COLON Expression RBRACK
Rule 204   Slice -> LBRACK Expression COLON RBRACK
Rule 205   Slice -> LBRACK Expression COLON Expression RBRACK
Rule 206   Slice -> LBRACK COLON Expression COLON Expression RBRACK
Rule 207   Slice -> LBRACK Expression COLON Expression COLON Expression RBRACK
Rule 208   TypeAssertion -> PERIOD LPAREN Type RPAREN
Rule 209   Arguments -> LPAREN RPAREN
Rule 210   Arguments -> LPAREN ExpressionList ELLIPSIS COMMA RPAREN
Rule 211   Arguments -> LPAREN ExpressionList ELLIPSIS RPAREN
Rule 212   Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 213   Arguments -> LPAREN ExpressionList RPAREN
Rule 214   Arguments -> LPAREN Type COMMA ExpressionList ELLIPSIS COMMA RPAREN
Rule 215   Arguments -> LPAREN Type COMMA ExpressionList ELLIPSIS RPAREN
Rule 216   Arguments -> LPAREN Type COMMA ExpressionList COMMA RPAREN
Rule 217   Arguments -> LPAREN Type COMMA ExpressionList RPAREN
Rule 218   Arguments -> LPAREN Type ELLIPSIS COMMA RPAREN
Rule 219   Arguments -> LPAREN Type ELLIPSIS RPAREN
Rule 220   Arguments -> LPAREN Type COMMA RPAREN
Rule 221   Arguments -> LPAREN Type RPAREN
Rule 222   Operand -> Literal
Rule 223   Operand -> ID
Rule 224   Operand -> ID PERIOD ID
Rule 225   Operand -> LPAREN Expression RPAREN
Rule 226   Literal -> BasicLit
Rule 227   Literal -> FunctionLit
Rule 228   Literal -> CompositeLit
Rule 229   BasicLit -> INT
Rule 230   BasicLit -> FLOAT
Rule 231   BasicLit -> STRING
Rule 232   BasicLit -> IMAG
Rule 233   FunctionLit -> FUNC Signature Block
Rule 234   CompositeLit -> ID LiteralValue
Rule 235   CompositeLit -> LiteralType LiteralValue
Rule 236   CompositeLit -> LBRACK ELLIPSIS RBRACK Operand LiteralValue
Rule 237   LiteralValue -> LBRACE RBRACE
Rule 238   LiteralValue -> SEMICOLON RBRACE
Rule 239   LiteralValue -> LBRACE ElementList RBRACE
Rule 240   LiteralValue -> SEMICOLON ElementList RBRACE
Rule 241   LiteralValue -> LBRACE ElementList COMMA RBRACE
Rule 242   LiteralValue -> SEMICOLON ElementList COMMA RBRACE
Rule 243   ElementList -> KeyedElement
Rule 244   ElementList -> ElementList COMMA KeyedElement
Rule 245   KeyedElement -> Element
Rule 246   KeyedElement -> Key COLON Element
Rule 247   Key -> Expression
Rule 248   Key -> LiteralValue
Rule 249   Element -> Expression
Rule 250   Element -> LiteralValue
Rule 251   assign_op -> ASSIGN
Rule 252   assign_op -> ADD_ASSIGN
Rule 253   assign_op -> SUB_ASSIGN
Rule 254   assign_op -> MUL_ASSIGN
Rule 255   assign_op -> QUO_ASSIGN
Rule 256   assign_op -> REM_ASSIGN
Rule 257   assign_op -> AND_ASSIGN
Rule 258   assign_op -> OR_ASSIGN
Rule 259   assign_op -> XOR_ASSIGN
Rule 260   assign_op -> SHL_ASSIGN
Rule 261   assign_op -> SHR_ASSIGN
Rule 262   assign_op -> AND_NOT_ASSIGN
Rule 263   rel_op -> EQL
Rule 264   rel_op -> NEQ
Rule 265   rel_op -> LSS
Rule 266   rel_op -> LEQ
Rule 267   rel_op -> GTR
Rule 268   rel_op -> GEQ
Rule 269   add_op -> ADD
Rule 270   add_op -> SUB
Rule 271   add_op -> OR
Rule 272   add_op -> XOR
Rule 273   mul_op -> MUL
Rule 274   mul_op -> QUO
Rule 275   mul_op -> REM
Rule 276   mul_op -> SHL
Rule 277   mul_op -> SHR
Rule 278   mul_op -> AND
Rule 279   mul_op -> AND_NOT
Rule 280   unary_op -> ADD
Rule 281   unary_op -> SUB
Rule 282   unary_op -> NOT
Rule 283   unary_op -> XOR
Rule 284   unary_op -> MUL
Rule 285   unary_op -> AND
Rule 286   unary_op -> ARROW

Terminals, with rules where they appear

ADD                  : 269 280
ADD_ASSIGN           : 252
AND                  : 278 285
AND_ASSIGN           : 257
AND_NOT              : 279
AND_NOT_ASSIGN       : 262
ARROW                : 117 286
ASSIGN               : 33 41 42 43 44 157 172 251
BREAK                : 124 125
CASE                 : 146 148 154 156
CHAN                 : 
COLON                : 108 145 153 202 203 204 205 206 206 207 207 246
COM                  : 
COMMA                : 47 75 77 177 210 212 214 214 215 216 216 217 218 220 241 242 244
COND                 : 
CONST                : 
CONTINUE             : 126 127
DEC                  : 119
DEFAULT              : 147 155
DEFER                : 175
DEFINE               : 45 159 173
ELLIPSIS             : 80 81 210 211 214 215 218 219 236
ELSE                 : 132 133 134 135
EQL                  : 263
FALLTHROUGH          : 129
FLOAT                : 230
FOR                  : 160
FUNC                 : 22 23 24 25 69 233
GEQ                  : 268
GO                   : 121
GOTO                 : 128
GTR                  : 267
ID                   : 5 13 22 23 24 25 33 34 46 47 51 52 52 86 87 108 125 127 128 199 200 223 224 224 234
IF                   : 130 131 132 133 134 135
IMAG                 : 232
IMPORT               : 8 9 10
INC                  : 118
INT                  : 229
INTERFACE            : 82 83
LAND                 : 183
LBRACE               : 43 44 60 61 82 83 88 137 138 139 140 141 142 149 150 237 239 241
LBRACK               : 59 67 68 201 202 203 204 205 206 207 236
LEQ                  : 266
LOR                  : 181
LPAREN               : 8 9 29 30 36 37 73 74 75 208 209 210 211 212 213 214 215 216 217 218 219 220 221 225
LSS                  : 265
MAP                  : 68
MUL                  : 66 273 284
MUL_ASSIGN           : 254
NEQ                  : 264
NOT                  : 282
OR                   : 271
OR_ASSIGN            : 258
PACKAGE              : 5
PERIOD               : 14 52 199 200 208 224
QUO                  : 274
QUO_ASSIGN           : 255
RANGE                : 171
RBRACE               : 43 44 60 61 82 83 88 137 138 139 140 141 142 149 150 237 238 239 240 241 242
RBRACK               : 59 67 68 201 202 203 204 205 206 207 236
REM                  : 275
REM_ASSIGN           : 256
RETURN               : 122 123
RPAREN               : 8 9 29 30 36 37 73 74 75 208 209 210 211 212 213 214 215 216 217 218 219 220 221 225
RUNE                 : 
SELECT               : 149 150
SEMICOLON            : 5 6 7 11 12 17 18 31 32 38 39 62 63 84 85 91 92 131 134 135 137 138 166 166 238 240 242
SHL                  : 276
SHL_ASSIGN           : 260
SHR                  : 277
SHR_ASSIGN           : 261
STRING               : 16 64 231
STRUCT               : 60 61
SUB                  : 270 281
SUB_ASSIGN           : 253
SWITCH               : 137 138 139 140 141 142
TYPE                 : 28 29 30
VAR                  : 35 36 37
VARTYPE              : 53
XOR                  : 272 283
XOR_ASSIGN           : 259
error                : 

Nonterminals, with rules where they appear

Arguments            : 198
ArrayType            : 54
Assignment           : 114
BasicLit             : 226
Block                : 23 25 102 130 131 132 132 133 134 135 135 160 233
BreakStmt            : 98
CLOSEB               : 22 23 88 130 131 132 133 134 135
CommCase             : 153
CommClause           : 151 152
CommClauseList       : 150 152
CompositeLit         : 228
Condition            : 161 168
ContinueStmt         : 99
Declaration          : 19 93
DeferStmt            : 107
Element              : 245 246
ElementList          : 239 240 241 242 244
EmptyStmt            : 110
ExprCaseClause       : 143 144
ExprCaseClauseList   : 137 139 141 144
ExprSwitchCase       : 145
ExprSwitchStmt       : 136
Expression           : 59 116 117 117 118 119 121 130 131 132 133 134 135 137 138 139 140 148 157 158 159 165 171 175 176 177 179 201 203 204 205 205 206 206 207 207 207 225 247 249
Expression1          : 178 181
Expression2          : 180 181 183
Expression3          : 182 183 185
Expression4          : 184 185 187
Expression5          : 186 187 189
ExpressionList       : 41 42 43 44 45 120 120 123 146 157 172 177 210 211 212 213 214 215 216 217
ExpressionStmt       : 111
FallthroughStmt      : 101
FieldDecl            : 62 63
FieldDeclList        : 60 63
ForClause            : 162
ForClause_1          : 166
ForClause_2          : 166
ForClause_3          : 166
ForStmt              : 106
ForStmt_1            : 160
FunctionDecl         : 20
FunctionLit          : 227
FunctionType         : 49
GoStmt               : 96
GotoStmt             : 100
IdentifierList       : 40 41 42 43 44 45 47 64 65 79 81 159 173
IfStmt               : 103 133 134
ImportDecl           : 6 7
ImportDeclList       : 1 2 7
ImportPath           : 13 14 15
ImportSpec           : 10 11 12
ImportSpecList       : 8 12
IncDecStmt           : 113
Index                : 195
InterfaceType        : 50
Key                  : 246
KeyedElement         : 243 244
LabeledStmt          : 94
Literal              : 222
LiteralType          : 48 235
LiteralValue         : 234 235 236 248 250
MapType              : 58
MethodDecl           : 21
MethodExpr           : 193
MethodSpec           : 84 85
MethodSpecList       : 83 85
OPENB                : 22 23 88 130 131 132 133 134 135
Operand              : 192 236
PackageClause        : 1 2 3 4
ParameterDecl        : 76 77
ParameterList        : 74 75 77
Parameters           : 24 25 70 71 71 72
PointerType          : 56
PrimaryExpr          : 190 194 195 196 197 198
RangeClause          : 163
RangeClause_1        : 171
RecvStmt             : 156
ReturnStmt           : 97
SelectStmt           : 105
Selector             : 194
SendStmt             : 112 154
ShortVarDecl         : 109
Signature            : 22 23 24 25 69 86 233
SimpleStmt           : 95 131 134 135 137 138 167 170
Slice                : 196
SliceType            : 57
SourceFile           : 0
Statement            : 91 92 108
StatementList        : 88 91 145 153
StructType           : 55
SwitchStmt           : 104
TopLevelDecl         : 17 18
TopLevelDeclList     : 1 3 18
Type                 : 33 34 40 41 43 59 64 65 66 67 68 68 72 78 79 80 81 87 199 208 214 215 216 217 218 219 220 221
TypeAssertion        : 197
TypeDecl             : 26
TypeSpec             : 28 31 32
TypeSpecList         : 29 32
UnaryExpr            : 179 188 189 191
VarDecl              : 27
VarSpec              : 35 38 39
VarSpecList          : 36 39
add_op               : 187
assign_op            : 120 179
mul_op               : 189
rel_op               : 185
unary_op             : 191

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause ImportDeclList TopLevelDeclList
    (2) SourceFile -> . PackageClause ImportDeclList
    (3) SourceFile -> . PackageClause TopLevelDeclList
    (4) SourceFile -> . PackageClause
    (5) PackageClause -> . PACKAGE ID SEMICOLON

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3

state 1

    (1) SourceFile -> PackageClause . ImportDeclList TopLevelDeclList
    (2) SourceFile -> PackageClause . ImportDeclList
    (3) SourceFile -> PackageClause . TopLevelDeclList
    (4) SourceFile -> PackageClause .
    (6) ImportDeclList -> . ImportDecl SEMICOLON
    (7) ImportDeclList -> . ImportDeclList ImportDecl SEMICOLON
    (17) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (18) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT ImportSpec
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (21) TopLevelDecl -> . MethodDecl
    (26) Declaration -> . TypeDecl
    (27) Declaration -> . VarDecl
    (22) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (23) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (24) MethodDecl -> . FUNC Parameters ID Signature
    (25) MethodDecl -> . FUNC Parameters ID Signature Block
    (28) TypeDecl -> . TYPE TypeSpec
    (29) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (30) TypeDecl -> . TYPE LPAREN RPAREN
    (35) VarDecl -> . VAR VarSpec
    (36) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (37) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 4 (SourceFile -> PackageClause .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    TYPE            shift and go to state 16
    VAR             shift and go to state 13

    MethodDecl                     shift and go to state 14
    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    ImportDeclList                 shift and go to state 11
    Declaration                    shift and go to state 8
    ImportDecl                     shift and go to state 6
    TopLevelDeclList               shift and go to state 7

state 2

    (5) PackageClause -> PACKAGE . ID SEMICOLON

    ID              shift and go to state 17


state 3

    (0) S' -> SourceFile .



state 4

    (20) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 20 (TopLevelDecl -> FunctionDecl .)


state 5

    (17) TopLevelDeclList -> TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 18


state 6

    (6) ImportDeclList -> ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 19


state 7

    (3) SourceFile -> PackageClause TopLevelDeclList .
    (18) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (21) TopLevelDecl -> . MethodDecl
    (26) Declaration -> . TypeDecl
    (27) Declaration -> . VarDecl
    (22) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (23) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (24) MethodDecl -> . FUNC Parameters ID Signature
    (25) MethodDecl -> . FUNC Parameters ID Signature Block
    (28) TypeDecl -> . TYPE TypeSpec
    (29) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (30) TypeDecl -> . TYPE LPAREN RPAREN
    (35) VarDecl -> . VAR VarSpec
    (36) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (37) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 3 (SourceFile -> PackageClause TopLevelDeclList .)
    FUNC            shift and go to state 12
    TYPE            shift and go to state 16
    VAR             shift and go to state 13

    MethodDecl                     shift and go to state 14
    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 20
    Declaration                    shift and go to state 8

state 8

    (19) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 19 (TopLevelDecl -> Declaration .)


state 9

    (8) ImportDecl -> IMPORT . LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> IMPORT . LPAREN RPAREN
    (10) ImportDecl -> IMPORT . ImportSpec
    (13) ImportSpec -> . ID ImportPath
    (14) ImportSpec -> . PERIOD ImportPath
    (15) ImportSpec -> . ImportPath
    (16) ImportPath -> . STRING

    LPAREN          shift and go to state 25
    ID              shift and go to state 26
    PERIOD          shift and go to state 23
    STRING          shift and go to state 21

    ImportSpec                     shift and go to state 22
    ImportPath                     shift and go to state 24

state 10

    (26) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 26 (Declaration -> TypeDecl .)


state 11

    (1) SourceFile -> PackageClause ImportDeclList . TopLevelDeclList
    (2) SourceFile -> PackageClause ImportDeclList .
    (7) ImportDeclList -> ImportDeclList . ImportDecl SEMICOLON
    (17) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (18) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT ImportSpec
    (19) TopLevelDecl -> . Declaration
    (20) TopLevelDecl -> . FunctionDecl
    (21) TopLevelDecl -> . MethodDecl
    (26) Declaration -> . TypeDecl
    (27) Declaration -> . VarDecl
    (22) FunctionDecl -> . FUNC ID OPENB Signature CLOSEB
    (23) FunctionDecl -> . FUNC ID OPENB Signature Block CLOSEB
    (24) MethodDecl -> . FUNC Parameters ID Signature
    (25) MethodDecl -> . FUNC Parameters ID Signature Block
    (28) TypeDecl -> . TYPE TypeSpec
    (29) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (30) TypeDecl -> . TYPE LPAREN RPAREN
    (35) VarDecl -> . VAR VarSpec
    (36) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (37) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 2 (SourceFile -> PackageClause ImportDeclList .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    TYPE            shift and go to state 16
    VAR             shift and go to state 13

    MethodDecl                     shift and go to state 14
    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 15
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    Declaration                    shift and go to state 8
    ImportDecl                     shift and go to state 27
    TopLevelDeclList               shift and go to state 28

state 12

    (22) FunctionDecl -> FUNC . ID OPENB Signature CLOSEB
    (23) FunctionDecl -> FUNC . ID OPENB Signature Block CLOSEB
    (24) MethodDecl -> FUNC . Parameters ID Signature
    (25) MethodDecl -> FUNC . Parameters ID Signature Block
    (73) Parameters -> . LPAREN RPAREN
    (74) Parameters -> . LPAREN ParameterList RPAREN
    (75) Parameters -> . LPAREN ParameterList COMMA RPAREN

    ID              shift and go to state 31
    LPAREN          shift and go to state 29

    Parameters                     shift and go to state 30

state 13

    (35) VarDecl -> VAR . VarSpec
    (36) VarDecl -> VAR . LPAREN VarSpecList RPAREN
    (37) VarDecl -> VAR . LPAREN RPAREN
    (40) VarSpec -> . IdentifierList Type
    (41) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (42) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (43) VarSpec -> . IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
    (44) VarSpec -> . IdentifierList ASSIGN LBRACE ExpressionList RBRACE
    (46) IdentifierList -> . ID
    (47) IdentifierList -> . IdentifierList COMMA ID

    LPAREN          shift and go to state 34
    ID              shift and go to state 32

    VarSpec                        shift and go to state 33
    IdentifierList                 shift and go to state 35

state 14

    (21) TopLevelDecl -> MethodDecl .

    SEMICOLON       reduce using rule 21 (TopLevelDecl -> MethodDecl .)


state 15

    (27) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 27 (Declaration -> VarDecl .)


state 16

    (28) TypeDecl -> TYPE . TypeSpec
    (29) TypeDecl -> TYPE . LPAREN TypeSpecList RPAREN
    (30) TypeDecl -> TYPE . LPAREN RPAREN
    (33) TypeSpec -> . ID ASSIGN Type
    (34) TypeSpec -> . ID Type

    LPAREN          shift and go to state 36
    ID              shift and go to state 38

    TypeSpec                       shift and go to state 37

state 17

    (5) PackageClause -> PACKAGE ID . SEMICOLON

    SEMICOLON       shift and go to state 39


state 18

    (17) TopLevelDeclList -> TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    $end            reduce using rule 17 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)


state 19

    (6) ImportDeclList -> ImportDecl SEMICOLON .
